Fix page blog-single

--- a/app/blog-single.html
+++ b/app/blog-single.html
@@ -216,20 +216,20 @@
 									<div class="leave-comment__column">
 										<form class="leave-comment__form" action="#">
 											<label class="leave-comment__form-label">Name <span>*</span>
-												<input class="leave-comment__form-name" type="text" name="#" id="#" required>
+												<input class="leave-comment__form-name" type="text" name="form-name" id="form-name" required>
 											</label>
 											<label class="leave-comment__form-label">Email <span>*</span>
-												<input class="leave-comment__form-email" type="email" name="#" id="#" required>
+												<input class="leave-comment__form-email" type="email" name="form-email" id="form-email" required>
 											</label>
 											<label class="leave-comment__form-label">Phone number
-												<input class="leave-comment__form-phone" type="tel" name="#" id="#">
+												<input class="leave-comment__form-phone" type="tel" name="form-phone" id="form-phone">
 											</label>
 										</form>
 									</div>
 									<div class="leave-comment__column">
 										<form class="leave-comment__form" action="#">
 											<label class="leave-comment__form-label">Comment <span>*</span>
-												<textarea class="leave-comment__form-message" name="#" id="#"required></textarea>
+												<textarea class="leave-comment__form-message" name="form-message" id="form-message"required></textarea>
 											</label>
 											<button class="leave-comment__form-btn btn">Post comment</button>
 										</form>
