Add content and img for blog-col, about us

--- a/app/about.html
+++ b/app/about.html
@@ -29,23 +29,16 @@
 						<div class="about__title">About <span>Hadona</span></div>
 						<div class="about__descr">
 							<div class="about__descr-text">
-								<p>Lorem Ipsum is simply dummy text consectetuer of the printing and typesetting industry. Lorem Ipsum has been the industry's consectetuer standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-								<span>It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</span>
-								<p>It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-								<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Morbi luctus. Duis lobortis. Nulla nec velit. Mauris pulvinar erat non massa. Suspendisse tortor turpis, porta nec, tempus vitae, iaculis semper, pede. Cras vel libero id lectus rhoncus porta. Suspendisse convallis felis ac enim. Vivamus tortor nisl, lobortis in, faucibus et, tempus at, dui. Nunc risus. Proin scelerisque augue. Nam ullamcorper</p>
+								<p>Whole Latte Love is the largest retailer of espresso machines on the internet and a noted authority on everything coffee. The company started in 1997, and quickly grew out of a young family’s basement to a large headquarters with multiple warehouses. Today, Whole Latte Love serves millions of customers throughout North America, and it's still 100% family-owned and dedicated to the same level of quality. We’re dedicated to providing our expert knowledge of all things coffee so that you can always enjoy the best coffee at home.</p>
+								<span>We are relentlessly committed to our customers, guaranteeing the best service on the best selection of products for the home coffee world.</span>
+								<p>We’ve been in this business for over 20 years, way longer than any of our competitors. We consistently strive to deliver videos and blogs covering everything from product reviews and side-by-side comparisons to buying guides and a Support Wiki.</p>
+								<p>Our Customer Service Team is the best there is. Period. When you call in or chat with us online, you will find whomever you’re speaking with to be incredibly informed, not to mention, curious, driven, personable, and kind.</p>
 								<p>Maecenas ullamcorper, odio vel tempus egestas, dui orci faucibus orci, sit amet aliquet lectus dolor et quam. Pellentesque consequat luctus purus.</p>
 							</div>
 							<div class="about__descr-text">
-								<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Morbi luctus. Duis lobortis. Nulla nec velit. Mauris pulvinar erat non massa. Suspendisse tortor turpis, porta nec, tempus vitae, iaculis semper, pede.
-								</p>
-								<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Morbi luctus. Duis lobortis. Nulla nec velit. Mauris pulvinar erat non massa. Suspendisse tortor turpis, porta nec, tempus vitae, iaculis semper, pede. Cras vel libero id lectus rhoncus porta.
-								</p>
-								<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Morbi luctus. Duis lobortis. Nulla nec velit.
-								</p>
-								<p>Vivamus tortor nisl, lobortis in, faucibus et, tempus at, dui. Nunc risus. Proin scelerisque augue. Nam ullamcorper. Phasellus id massa. Pellentesque nisl. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nunc augue. Aenean sed justo non leo vehicula laoreet. Praesent ipsum libero, auctor ac, tempus nec, tempor nec, justo.
-								</p>
-								<p>Maecenas ullamcorper, odio vel tempus egestas, dui orci faucibus orci, sit amet aliquet lectus dolor et quam. Pellentesque consequat luctus purus. Nunc et risus. Etiam a nibh. Phasellus dignissim metus eget nisi. Vestibulum sapien dolor, aliquet nec, porta ac, malesuada a, libero. Praesent feugiat purus eget est. Nulla facilisi. 
-								</p>
+								<p>Many of our products are backed by a 3-year warranty for parts and labor, serviced by a dedicated team of customer support experts and in-house certified professionals for repairs and troubleshooting.</p>
+								<p>Quality is our first and foremost mission, accomplished through an impeccable attention to detail at every level of the shopping experience. With heavy research and testing, we select only the best products to feature on our site. We pride ourselves as the experts of the industry, and we make sure that knowledge passes on to you so you can be as informed as possible before making a purchase. Afterward, we support our customers with a vibrant and knowledgeable team of coffee experts available by phone, online chat, or email.</p>
+								<p>Whole Latte Love works to create a company culture that sustains a creative workforce and encourages a healthy work-life balance. And, as a successful growing company, we’re always looking for those like-minded to join our team.</p>
 							</div>
 						</div>
 					</div>
@@ -60,12 +53,12 @@
 								<div class="choose-us__item">
 									<div class="choose-us__item-img">
 										<a href="#">
-											<img src="img/01.jpg" alt="">
+											<img src="img/choose-us/01.jpg" alt="">
 										</a>
 									</div>
 									<div class="choose-us__item-body">
 										<a class="choose-us__item-title" href="#">Who are we ?</a>
-										<div class="choose-us__item-descr">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries.</div>
+										<div class="choose-us__item-descr">Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</div>
 										<a class="choose-us__item-btn btn" href="#">Read more</a>
 									</div>
 								</div>
@@ -74,12 +67,12 @@
 								<div class="choose-us__item">
 									<div class="choose-us__item-img">
 										<a href="#">
-											<img src="img/01.jpg" alt="">
+											<img src="img/choose-us/03.jpg" alt="">
 										</a>
 									</div>
 									<div class="choose-us__item-body">
-										<a class="choose-us__item-title" href="#">Who are we ?</a>
-										<div class="choose-us__item-descr">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries.</div>
+										<a class="choose-us__item-title" href="#">Why choose us?</a>
+										<div class="choose-us__item-descr">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English.</div>
 										<a class="choose-us__item-btn btn" href="#">Read more</a>
 									</div>
 								</div>
@@ -88,12 +81,12 @@
 								<div class="choose-us__item">
 									<div class="choose-us__item-img">
 										<a href="#">
-											<img src="img/01.jpg" alt="">
+											<img src="img/choose-us/04.jpg" alt="">
 										</a>
 									</div>
 									<div class="choose-us__item-body">
-										<a class="choose-us__item-title" href="#">Who are we ?</a>
-										<div class="choose-us__item-descr">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries.</div>
+										<a class="choose-us__item-title" href="#">History of our activities</a>
+										<div class="choose-us__item-descr">Whole Latte Love works to create a company culture that sustains a creative workforce and encourages a healthy work-life balance. And, as a successful growing company, we’re always looking for those like-minded to join our team.</div>
 										<a class="choose-us__item-btn btn" href="#">Read more</a>
 									</div>
 								</div>
@@ -111,10 +104,10 @@
 							<div class="our-team__column">
 								<div class="our-team__item">
 									<div class="our-team__img">
-										<img src="img/testimonial/01.jpg" alt="">
+										<img src="img/our-team/10.jpg" alt="">
 									</div>
 									<div class="our-team__body">
-										<div class="our-team__name">Join Doe - <span>Director of Sales</span></div>
+										<div class="our-team__name">gary salzman - <span>Founder/CEO</span></div>
 										<div class="our-team__links">
 											<ul class="our-team__links-list">
 												<li class="our-team__links-item"><a href="#" class="our-team__links-link"><i class="icon-gplus"></i></a></li>
@@ -129,10 +122,27 @@
 							<div class="our-team__column">
 								<div class="our-team__item">
 									<div class="our-team__img">
-										<img src="img/testimonial/02.jpg" alt="">
+										<img src="img/our-team/09.jpg" alt="">
 									</div>
 									<div class="our-team__body">
-										<div class="our-team__name">Join Doe - <span>Director of Sales</span></div>
+										<div class="our-team__name">cheyenne righetti - <span>Vice President of Global Sales and Product Development</span></div>
+										<div class="our-team__links">
+											<ul class="our-team__links-list">
+												<li class="our-team__links-item"><a href="#" class="our-team__links-link"><i class="icon-gplus"></i></a></li>
+												<li class="our-team__links-item"><a href="#" class="our-team__links-link"><i class="icon-facebook"></i></a></li>
+												<li class="our-team__links-item"><a href="#" class="our-team__links-link"><i class="icon-twitter"></i></a></li>
+											</ul>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="our-team__column">
+								<div class="our-team__item">
+									<div class="our-team__img">
+										<img src="img/our-team/07.jpg" alt="">
+									</div>
+									<div class="our-team__body">
+										<div class="our-team__name">andrew sanjanwala - <span>Director of Sales and Marketing</span></div>
 										<div class="our-team__links">
 											<ul class="our-team__links-list">
 												<li class="our-team__links-item"><a href="#" class="our-team__links-link"><i class="icon-gplus"></i></a></li>
@@ -147,13 +157,28 @@
 							<div class="our-team__column">
 								<div class="our-team__item">
 									<div class="our-team__img">
-										<img src="img/testimonial/03.jpg" alt="">
+										<img src="img/our-team/08.jpg" alt="">
 									</div>
 									<div class="our-team__body">
-										<div class="our-team__name">Join Doe - <span>Director of Sales</span></div>
+										<div class="our-team__name">tracy eak - <span>Lead Engineer</span></div>
 										<div class="our-team__links">
 											<ul class="our-team__links-list">
-												<li class="our-team__links-item"><a href="#" class="our-team__links-link"><i class="icon-gplus"></i></a></li>
+												<li class="our-team__links-item"><a href="#" class="our-team__links-link"><i class="icon-facebook"></i></a></li>
+												<li class="our-team__links-item"><a href="#" class="our-team__links-link"><i class="icon-twitter"></i></a></li>
+											</ul>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="our-team__column">
+								<div class="our-team__item">
+									<div class="our-team__img">
+										<img src="img/our-team/06.jpg" alt="">
+									</div>
+									<div class="our-team__body">
+										<div class="our-team__name">Emma Celina - <span>Retail Sales Manager</span></div>
+										<div class="our-team__links">
+											<ul class="our-team__links-list">
 												<li class="our-team__links-item"><a href="#" class="our-team__links-link"><i class="icon-facebook"></i></a></li>
 												<li class="our-team__links-item"><a href="#" class="our-team__links-link"><i class="icon-twitter"></i></a></li>
 												<li class="our-team__links-item"><a href="#" class="our-team__links-link"><i class="icon-pinterest"></i></a></li>
@@ -165,52 +190,14 @@
 							<div class="our-team__column">
 								<div class="our-team__item">
 									<div class="our-team__img">
-										<img src="img/testimonial/04.jpg" alt="">
+										<img src="img/our-team/02.jpg" alt="">
 									</div>
 									<div class="our-team__body">
-										<div class="our-team__name">Join Doe - <span>Director of Sales</span></div>
+										<div class="our-team__name">Tracy Schafer - <span>Customer Service Manage</span></div>
 										<div class="our-team__links">
 											<ul class="our-team__links-list">
-												<li class="our-team__links-item"><a href="#" class="our-team__links-link"><i class="icon-gplus"></i></a></li>
 												<li class="our-team__links-item"><a href="#" class="our-team__links-link"><i class="icon-facebook"></i></a></li>
 												<li class="our-team__links-item"><a href="#" class="our-team__links-link"><i class="icon-twitter"></i></a></li>
-												<li class="our-team__links-item"><a href="#" class="our-team__links-link"><i class="icon-pinterest"></i></a></li>
-											</ul>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class="our-team__column">
-								<div class="our-team__item">
-									<div class="our-team__img">
-										<img src="img/testimonial/05.png" alt="">
-									</div>
-									<div class="our-team__body">
-										<div class="our-team__name">Join Doe - <span>Director of Sales</span></div>
-										<div class="our-team__links">
-											<ul class="our-team__links-list">
-												<li class="our-team__links-item"><a href="#" class="our-team__links-link"><i class="icon-gplus"></i></a></li>
-												<li class="our-team__links-item"><a href="#" class="our-team__links-link"><i class="icon-facebook"></i></a></li>
-												<li class="our-team__links-item"><a href="#" class="our-team__links-link"><i class="icon-twitter"></i></a></li>
-												<li class="our-team__links-item"><a href="#" class="our-team__links-link"><i class="icon-pinterest"></i></a></li>
-											</ul>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class="our-team__column">
-								<div class="our-team__item">
-									<div class="our-team__img">
-										<img src="img/testimonial/06.jpg" alt="">
-									</div>
-									<div class="our-team__body">
-										<div class="our-team__name">Join Doe - <span>Director of Sales</span></div>
-										<div class="our-team__links">
-											<ul class="our-team__links-list">
-												<li class="our-team__links-item"><a href="#" class="our-team__links-link"><i class="icon-gplus"></i></a></li>
-												<li class="our-team__links-item"><a href="#" class="our-team__links-link"><i class="icon-facebook"></i></a></li>
-												<li class="our-team__links-item"><a href="#" class="our-team__links-link"><i class="icon-twitter"></i></a></li>
-												<li class="our-team__links-item"><a href="#" class="our-team__links-link"><i class="icon-pinterest"></i></a></li>
 											</ul>
 										</div>
 									</div>
