--- a/app/blocks/_footer.html
+++ b/app/blocks/_footer.html
@@ -144,7 +144,7 @@
 
 		<div class="footer__copyright">
 			<div class="footer__copyright-row">
-				<div class="footer__copyright-text">© 2020 SnsTheme. All Rights Reserved. Developed By SnsTheme</div>
+				<div class="footer__copyright-text">© 2020. All Rights Reserved.</div>
 				<ul class="footer__copyright-linkns">
 					<li><a href="#"><img src="img/footer/mastercard.png" alt=""></a></li>
 					<li><a href="#"><img src="img/footer/paypal.png" alt=""></a></li>
