--- a/app/blocks/_sidebar-block.html
+++ b/app/blocks/_sidebar-block.html
@@ -1,7 +1,7 @@
 							<div class="@@sidebar-block__class sidebar-block">
 								<div class="sidebar-block__img">
-									<a href="@@sidebar-block__link">
-										<img src="@@sidebar-block__img" alt="@@sidebar-block__alt">
+									<a href="#">
+										<img src="@@sidebar-block__img" alt="sidebar-img">
 									</a>
 								</div>
 							</div>
