--- a/app/blocks/_sidebar-tags.html
+++ b/app/blocks/_sidebar-tags.html
@@ -1,16 +1,16 @@
 							<div class="@@sidebar-tags__class sidebar-tags">
 								<div class="sidebar-tags__title sidebar__title">Popular tags</div>
 								<ul class="sidebar-tags__list">
-									<li class="sidebar-tags__item"><a href="#" class="sidebar-tags__link">Shopping</a></li>
+									<li class="sidebar-tags__item"><a href="#" class="sidebar-tags__link">Cappuccino</a></li>
 									<li class="sidebar-tags__item"><a href="#" class="sidebar-tags__link">Coffee maker</a></li>
 									<li class="sidebar-tags__item"><a href="#" class="sidebar-tags__link">Coffee</a></li>
-									<li class="sidebar-tags__item"><a href="#" class="sidebar-tags__link">Wordpress</a></li>
-									<li class="sidebar-tags__item"><a href="#" class="sidebar-tags__link">Responsive</a></li>
-									<li class="sidebar-tags__item"><a href="#" class="sidebar-tags__link">Shoping online</a></li>
-									<li class="sidebar-tags__item"><a href="#" class="sidebar-tags__link">Work</a></li>
-									<li class="sidebar-tags__item"><a href="#" class="sidebar-tags__link">Design</a></li>
+									<li class="sidebar-tags__item"><a href="#" class="sidebar-tags__link">Latte</a></li>
+									<li class="sidebar-tags__item"><a href="#" class="sidebar-tags__link">Iced Espresso</a></li>
+									<li class="sidebar-tags__item"><a href="#" class="sidebar-tags__link">Iced Coffee</a></li>
+									<li class="sidebar-tags__item"><a href="#" class="sidebar-tags__link">French Press</a></li>
+									<li class="sidebar-tags__item"><a href="#" class="sidebar-tags__link">Black</a></li>
 									<li class="sidebar-tags__item"><a href="#" class="sidebar-tags__link">Coffee</a></li>
 									<li class="sidebar-tags__item"><a href="#" class="sidebar-tags__link">Bestsalers</a></li>
-									<li class="sidebar-tags__item"><a href="#" class="sidebar-tags__link">Most wanted</a></li>
+									<li class="sidebar-tags__item"><a href="#" class="sidebar-tags__link">Single Serve</a></li>
 								</ul>
 							</div>
