--- a/app/blog-col.html
+++ b/app/blog-col.html
@@ -26,13 +26,29 @@
 									<div class="blog-list__item">
 										<div class="blog-list__item-img">
 											<a href="#">
-												<img src="img/news/03.jpg" alt="">
+												<img src="img/blog/01.jpg" alt="">
 											</a>
 										</div>
 										<div class="blog-list__item-body">
-											<a class="blog-list__item-title" href="#">2016 Summer Women Chiffon Short <span>|  By KOMODOART</span></a>
-											<div class="blog-list__item-date">February 12, 2016   |  In: Music, Trending</div>
-											<div class="blog-list__item-descr">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. </div>											<a class="blog-list__item-btn btn" href="#">Read more</a>
+											<a class="blog-list__item-title" href="blog-single.html">How To Make a Latte at Home Without an Espresso Machine <span>|  By KOMODOART</span></a>
+											<div class="blog-list__item-date">July 11, 2020   |  In: <a href="#">Latte</a></div>
+											<div class="blog-list__item-descr">We love our iced coffee in the summer, but fall and winter belong to the latte. We love to sit inside on a chilly day with a hot, frothy latte or cappuccino. But a latte shouldn’t just be a coffee shop treat.</div>
+											<a class="blog-list__item-btn btn" href="#">Read more</a>
+										</div>
+									</div>
+								</div>
+								<div class="blog-list__column">
+									<div class="blog-list__item">
+										<div class="blog-list__item-img">
+											<a href="#">
+												<img src="img/blog/02.jpg" alt="">
+											</a>
+										</div>
+										<div class="blog-list__item-body">
+											<a class="blog-list__item-title" href="#">How to Make Espresso <span>|  By KOMODOART</span></a>
+											<div class="blog-list__item-date">July 8, 2020   |  In: <a href="#">Espresso</a></div>
+											<div class="blog-list__item-descr">So you’ve decided that you’re ready to make espresso. A noble endeavor, surely, and one not to be undertaken lightly. Although espresso preparation has evolved almost constantly since the first espresso machine was patented over a century ago, there are a few pillars of the process that we should adhere to if you’re hoping to make consistently delicious coffee.</div>
+											<a class="blog-list__item-btn btn" href="#">Read more</a>
 										</div>
 									</div>
 								</div>
@@ -44,38 +60,10 @@
 											</a>
 										</div>
 										<div class="blog-list__item-body">
-											<a class="blog-list__item-title" href="#">2016 Summer Women Chiffon Short <span>|  By KOMODOART</span></a>
-											<div class="blog-list__item-date">February 12, 2016   |  In: Music, Trending</div>
-											<div class="blog-list__item-descr">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. </div>
+											<a class="blog-list__item-title" href="#">How to Choose a Coffee Maker <span>|  By KOMODOART</span></a>
+											<div class="blog-list__item-date">July 3, 2020  |  In: <a href="#">Coffee</a><a href="#">Coffee Maker</a></div>
+											<div class="blog-list__item-descr">Let me start off by saying that you most absolutely need a coffee maker. Starting your day with a bad-tasting cup of coffee is much worse than not drinking your morning coffee! So knowing what to buy and how is the first step to preparing a steaming cup at home.</div>
 											<a class="blog-list__item-btn btn" href="#">Read more</a>
-										</div>
-									</div>
-								</div>
-								<div class="blog-list__column">
-									<div class="blog-list__item">
-										<div class="blog-list__item-img">
-											<a href="#">
-												<img src="img/news/02.jpg" alt="">
-											</a>
-										</div>
-										<div class="blog-list__item-body">
-											<a class="blog-list__item-title" href="#">2016 Summer Women Chiffon Short <span>|  By KOMODOART</span></a>
-											<div class="blog-list__item-date">February 12, 2016   |  In: Music, Trending</div>
-											<div class="blog-list__item-descr">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. </div>											<a class="blog-list__item-btn btn" href="#">Read more</a>
-										</div>
-									</div>
-								</div>
-								<div class="blog-list__column">
-									<div class="blog-list__item">
-										<div class="blog-list__item-img">
-											<a href="#">
-												<img src="img/news/04.jpg" alt="">
-											</a>
-										</div>
-										<div class="blog-list__item-body">
-											<a class="blog-list__item-title" href="#">2016 Summer Women Chiffon Short <span>|  By KOMODOART</span></a>
-											<div class="blog-list__item-date">February 12, 2016   |  In: Music, Trending</div>
-											<div class="blog-list__item-descr">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. </div>											<a class="blog-list__item-btn btn" href="#">Read more</a>
 										</div>
 									</div>
 								</div>
@@ -87,9 +75,9 @@
 											</a>
 										</div>
 										<div class="blog-list__item-body">
-											<a class="blog-list__item-title" href="#">2016 Summer Women Chiffon Short <span>|  By KOMODOART</span></a>
-											<div class="blog-list__item-date">February 12, 2016   |  In: Music, Trending</div>
-											<div class="blog-list__item-descr">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. </div>
+											<a class="blog-list__item-title" href="#">How to pick between bean-to-cup, pod and espresso models <span>|  By KOMODOART</span></a>
+											<div class="blog-list__item-date">July 1, 2020  |  In: <a href="#">bean</a><a href="#">espresso</a><a href="#">pod</a></div>
+											<div class="blog-list__item-descr">With the great British public drinking an impressive 95 million cups of coffee a day, it’s fair to say we’re a nation of coffee lovers. For those who shun the instant stuff, an at-home coffee machine may be worth the investment, as you can create barista-style coffees at the touch of a button.</div>
 											<a class="blog-list__item-btn btn" href="#">Read more</a>
 										</div>
 									</div>
@@ -98,13 +86,29 @@
 									<div class="blog-list__item">
 										<div class="blog-list__item-img">
 											<a href="#">
-												<img src="img/news/01.jpg" alt="">
+												<img src="img/blog/06.jpg" alt="">
 											</a>
 										</div>
 										<div class="blog-list__item-body">
-											<a class="blog-list__item-title" href="#">2016 Summer Women Chiffon Short <span>|  By KOMODOART</span></a>
-											<div class="blog-list__item-date">February 12, 2016   |  In: Music, Trending</div>
-											<div class="blog-list__item-descr">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. </div>											<a class="blog-list__item-btn btn" href="#">Read more</a>
+											<a class="blog-list__item-title" href="#">How to Choose Coffee <span>|  By KOMODOART</span></a>
+											<div class="blog-list__item-date">June 30, 2020   |  In: <a href="#">Coffee</a></div>
+											<div class="blog-list__item-descr">Coffee is a beloved drink for many. If you're a coffee lover, it's understandable you'll want to pick the highest quality beans or grounds possible. Luckily, assessing a few factors can help you pick the right coffee for you.</div>
+											<a class="blog-list__item-btn btn" href="#">Read more</a>
+										</div>
+									</div>
+								</div>
+								<div class="blog-list__column">
+									<div class="blog-list__item">
+										<div class="blog-list__item-img">
+											<a href="#">
+												<img src="img/blog/04.jpg" alt="">
+											</a>
+										</div>
+										<div class="blog-list__item-body">
+											<a class="blog-list__item-title" href="#">11 Ways to Brew Better Coffee at Home <span>|  By KOMODOART</span></a>
+											<div class="blog-list__item-date">June 27, 2020   |  In: <a href="#">Coffee</a></div>
+											<div class="blog-list__item-descr">At its heart, brewing better coffee is a straightforward task. You want to pour the proper amount of water at the proper temperature through the properly portioned and ground coffee to extract the best flavors out of it. Improving your morning cup may be easier than you think.</div>
+											<a class="blog-list__item-btn btn" href="#">Read more</a>
 										</div>
 									</div>
 								</div>
@@ -130,77 +134,15 @@
 							<!-- sidebar-search end -->
 
 							<!-- sidebar-categories -->
-							<div class="blog-list__sidebar-categories sidebar-categories">
-								<div class="sidebar-categories__title sidebar__title">Categories</div>
-								<ul class="sidebar-categories__list">
-									<li class="sidebar-categories__item"><a href="#" class="sidebar-categories__link">Fashion</a></li>
-									<li class="sidebar-categories__item"><a href="#" class="sidebar-categories__link">Inspiration</a></li>
-									<li class="sidebar-categories__item"><a href="#" class="sidebar-categories__link">Music</a></li>
-									<li class="sidebar-categories__item"><a href="#" class="sidebar-categories__link">Sport</a></li>
-									<li class="sidebar-categories__item"><a href="#" class="sidebar-categories__link">Trending</a></li>
-								</ul>
-							</div>
+							@@include('blocks/_sidebar-categories.html',{
+								"sidebar-categories__class":"blog-list__sidebar-categories"
+							})
 							<!-- sidebar-categories end -->
 
 							<!-- sidebar-post -->
-							<div class="blog-list__sidebar-post sidebar-post">
-								<div class="sidebar-post__title sidebar__title">Latest post</div>
-								<a href="#"> 
-									<div class="sidebar-post__item">
-									<div class="sidebar-post__item-img">
-										<img src="img/news/01.jpg" alt="">
-									</div>
-									<div class="sidebar-post__item-body">
-										<div class="sidebar-post__item-title">2016 Summer Women Chiffon Short</div>
-										<div class="sidebar-post__item-date">February 12, 2016</div>
-									</div>
-									</div>
-								</a>
-								<a href="#">
-									<div class="sidebar-post__item">
-									<div class="sidebar-post__item-img">
-										<img src="img/news/02.jpg" alt="">
-									</div>
-									<div class="sidebar-post__item-body">
-										<div class="sidebar-post__item-title">Cappuccino Cooler</div>
-										<div class="sidebar-post__item-date">February 12, 2016</div>
-									</div>
-									</div>
-								</a>
-								<a href="#">
-									<div class="sidebar-post__item">
-									<div class="sidebar-post__item-img">
-										<img src="img/news/03.jpg" alt="">
-									</div>
-									<div class="sidebar-post__item-body">
-										<div class="sidebar-post__item-title">Flavored Latte</div>
-										<div class="sidebar-post__item-date">February 12, 2016</div>
-									</div>
-									</div>
-								</a>
-								<a href="#">
-									<div class="sidebar-post__item">
-									<div class="sidebar-post__item-img">
-										<img src="img/news/04.jpg" alt="">
-									</div>
-									<div class="sidebar-post__item-body">
-										<div class="sidebar-post__item-title">Coconut Oil Coffee</div>
-										<div class="sidebar-post__item-date">February 12, 2016</div>
-									</div>
-									</div>
-								</a>
-								<a href="#">
-									<div class="sidebar-post__item">
-									<div class="sidebar-post__item-img">
-										<img src="img/news/05.jpg" alt="">
-									</div>
-									<div class="sidebar-post__item-body">
-										<div class="sidebar-post__item-title">How to Make a Latte</div>
-										<div class="sidebar-post__item-date">February 12, 2016</div>
-									</div>
-									</div>
-								</a>
-							</div>
+							@@include('blocks/_sidebar-post.html',{
+								"sidebar-post__class":"blog-list__sidebar-post"
+							})
 							<!-- sidebar-post end -->
 
 							<!-- sidebar-tags -->
@@ -212,8 +154,7 @@
 							<!-- sidebar-block -->
 							@@include('blocks/_sidebar-block.html',{
 								"sidebar-block__class":"blog-list__sidebar-block",
-								"sidebar-block__link":"#",
-								"sidebar-block__img":"img/newsletter/bg.jpg"
+								"sidebar-block__img":"img/information_01/sidebar-block.jpg"
 							})
 							<!-- sidebar-block end -->
 
