--- a/app/blocks/_page-policy.html
+++ b/app/blocks/_page-policy.html
@@ -8,8 +8,8 @@
 									<img src="img/icons/checked_truck_50px.png" alt="">
 								</div>
 								<div class="page-policy__body">
-									<div class="page-policy__body-title">Freeshipping on order over $100 </div>
-									<div class="page-policy__body-text">Lorem Ipsum is simply dummy text of the printing  industry. </div>
+									<div class="page-policy__body-title">Products that ship to you</div>
+									<div class="page-policy__body-text">Find top products that ship to you.</div>
 								</div>
 							</div>
 						</div>
@@ -20,7 +20,7 @@
 								</div>
 								<div class="page-policy__body">
 									<div class="page-policy__body-title">10% off the bill</div>
-									<div class="page-policy__body-text">Lorem Ipsum is simply dummy text of the printing  industry.</div>
+									<div class="page-policy__body-text">Low prices and amazing deals every day.</div>
 								</div>
 							</div>
 						</div>
@@ -31,7 +31,7 @@
 								</div>
 								<div class="page-policy__body">
 									<div class="page-policy__body-title">Security payment</div>
-									<div class="page-policy__body-text">Lorem Ipsum is simply dummy text of the printing  industry.</div>
+									<div class="page-policy__body-text">We protect your personal payment information.</div>
 								</div>
 							</div>
 						</div>
@@ -42,7 +42,7 @@
 								</div>
 								<div class="page-policy__body">
 									<div class="page-policy__body-title">live Support</div>
-									<div class="page-policy__body-text">Lorem Ipsum is simply dummy text of the printing  industry.</div>
+									<div class="page-policy__body-text">24/7 customer service. You can email, chat, or call us any time.</div>
 								</div>
 							</div>
 						</div>
